cabal-version:       2.4
name:                base-props
version:             0.0.1
license:             MIT
author:              Justin Christensen

common props
    ghc-options: -Wall
    build-depends: base ^>=4.12.0.0
    default-language: Haskell2010

test-suite props
    import: props
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck
